styles/style.css
/*
* --------------------------------------------
* Custom styles to override the default Bootstrap ones
* --------------------------------------------
*/

/* New Color Palette:
* Lightest (Text):         #dfdfdf      (text, contrast with dark)
* Dark Green (Primary):    #202020      
* Light Green (Secondary): #9f9f9f      (canvas background)
* Reddish-Brown (Accent):  #606060
*/

.bg-info {
  background-color: #9f9f9f !important;
  /* Light green for secondary backgrounds */
}

.navbar-light .navbar-brand, .navbar-light .navbar-nav .nav-link {
  color: #202020;
  /* Dark green for brand name & nav links for visibility */
}

.btn-info {
  color: #dfdfdf;
  /* Lightest shade for text on info button for contrast */
  background-color: #9f9f9f;
  /* Light green for button background */
  border-color: #202020;
  /* Dark green for button border */
}

.btn-primary {
  color: #dfdfdf;
  /* Lightest shade for text */
  font-size: 150%;
  background-color: #202020;
  /* Dark green for primary button background */
  border-color: #606060;
  /* Reddish-brown for border to use as accent */
  border-width: thick;
}

.hero-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
}

.hero-text button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 10px 25px;
  color: black;
  background-color: #ddd;
  text-align: center;
  cursor: pointer;
}

.hero-text button:hover {
  background-color: #555;
  color: white;
}

body {
  background-color: #dfdfdf;
  height: 1500px;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
}

.responsive {
  width: 100%;
  height: auto;
}

.rounded-circle {
  width: 100px;
  height: 100px;
  margin: 0 auto;
  /* Centers the circle horizontally */
}

/* Add CSS styles for the card container with vertical scrolling */
.card-container {
  max-height: auto;
  /* Adjust the maximum height as needed */
  overflow-y: auto;
}

/* Style the individual cards as needed */
.card {
  width: 45%;
  /* Adjust the width as per your design, leaving a little space for margins */
  margin: 2%;
  /* Add margin between cards */
}

